GeneUtils: PanelBuilder: more probe overlap handling